--- a/client/src/styles/Submit.css
+++ b/client/src/styles/Submit.css
@@ -25,7 +25,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
+  padding-bottom: 12.5px;
 }
 
 .input-and-charcount textarea {
@@ -106,4 +107,49 @@ h1 {
 
 .about-us-container button:hover {
   background-color: #bac4c7;
+}
+
+.loading-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it appears above all other elements */
+}
+
+.loading-modal {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  width: 300px;
+}
+
+.loading-modal img {
+  width: 80%;
+  height: 70%;
+  margin-bottom: 20px;
+  border-radius: 10%;
+}
+
+.loading-modal button {
+  background-color: #ffdd57;
+  color: #000;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  bottom: 3px;
+}
+
+.loading-modal button:hover {
+  background-color: #ffc107;
 }
